--- a/.github/workflows/get_spotify_features.yml
+++ b/.github/workflows/get_spotify_features.yml
@@ -27,14 +27,12 @@ jobs:
           git pull origin main
 
       - name: Run spotify data collection
+        timeout-minutes: 3
         env:
             SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
             SPOTIFY_SECRET: ${{ secrets.SPOTIFY_SECRET }}
         run: |
-            python python src/04-data_get_spotify_features.py &
-            SCRIPT_PID=$!
-            sleep 900  # Wait
-            kill $SCRIPT_PID
+            python python src/04-data_get_spotify_features.py
 
       - name: Commit files
         run: |
