--- a/.github/workflows/get_spotify_features.yml
+++ b/.github/workflows/get_spotify_features.yml
@@ -32,7 +32,7 @@ jobs:
             SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
             SPOTIFY_SECRET: ${{ secrets.SPOTIFY_SECRET }}
         run: |
-            python python src/04-data_get_spotify_features.py
+            python src/04-data_get_spotify_features.py
 
       - name: Commit files
         run: |
